--- a/static/sass/_trumps.utilities.scss
+++ b/static/sass/_trumps.utilities.scss
@@ -104,133 +104,52 @@ div[class*="col-sm"] {
 .u-padding-10 {
     padding: 10px;
 }
-.u-padding-top-60 {
-    padding-top: 60px;
-}
-.u-padding-top-3 {
-    padding-top: 3px;
-}
+.u-padding-top-60 { padding-top: 60px; }
+.u-padding-top-3 { padding-top: 3px; }
 
-.u-margin-top-100 {
-    margin-top: 100px;
-}
-.u-margin-top-80 {
-    margin-top: 80px;
-}
-.u-margin-top-60 {
-    margin-top: 60px;
-}
-.u-margin-top-50 {
-    margin-top: 50px;
-}
-.u-margin-top-40 {
-    margin-top: 40px;
-}
-.u-margin-top-30 {
-    margin-top: 30px;
-}
-.u-margin-top-25 {
-    margin-top: 25px;
-}
-.u-margin-top-20 {
-    margin-top: 20px;
-}
-.u-margin-top-15 {
-    margin-top: 15px;
-}
-.u-margin-top-10 {
-    margin-top: 10px;
-}
+.u-margin-top-100 { margin-top: 100px; }
+.u-margin-top-80 { margin-top: 80px; }
+.u-margin-top-70 { margin-top: 70px; }
+.u-margin-top-60 { margin-top: 60px; }
+.u-margin-top-50 { margin-top: 50px; }
+.u-margin-top-40 { margin-top: 40px; }
+.u-margin-top-30 { margin-top: 30px; }
+.u-margin-top-25 { margin-top: 25px; }
+.u-margin-top-20 { margin-top: 20px; }
+.u-margin-top-15 { margin-top: 15px; }
+.u-margin-top-10 { margin-top: 10px; }
 
-.u-margin-bottom-100 {
-    margin-bottom: 100px;
-}
-.u-margin-bottom-80 {
-    margin-bottom: 80px;
-}
-.u-margin-bottom-70 {
-    margin-bottom: 70px;
-}
-.u-margin-bottom-60 {
-    margin-bottom: 60px;
-}
-.u-margin-bottom-50 {
-    margin-bottom: 50px;
-}
-.u-margin-bottom-40 {
-    margin-bottom: 40px;
-}
-.u-margin-bottom-30 {
-    margin-bottom: 30px;
-}
-.u-margin-bottom-25 {
-    margin-bottom: 25px;
-}
-.u-margin-bottom-20 {
-    margin-bottom: 20px;
-}
-.u-margin-bottom-15 {
-    margin-bottom: 15px;
-}
-.u-margin-bottom-10 {
-    margin-bottom: 10px;
-}
+.u-margin-bottom-100 { margin-bottom: 100px; }
+.u-margin-bottom-80 { margin-bottom: 80px; }
+.u-margin-bottom-70 { margin-bottom: 70px; }
+.u-margin-bottom-60 { margin-bottom: 60px; }
+.u-margin-bottom-50 { margin-bottom: 50px; }
+.u-margin-bottom-40 { margin-bottom: 40px; }
+.u-margin-bottom-30 { margin-bottom: 30px; }
+.u-margin-bottom-25 { margin-bottom: 25px; }
+.u-margin-bottom-20 { margin-bottom: 20px; }
+.u-margin-bottom-15 { margin-bottom: 15px; }
+.u-margin-bottom-10 { margin-bottom: 10px; }
 
-.u-margin-right-100 {
-    margin-right: 100px;
-}
-.u-margin-right-60 {
-    margin-right: 60px;
-}
-.u-margin-right-50 {
-    margin-right: 50px;
-}
-.u-margin-right-40 {
-    margin-right: 40px;
-}
-.u-margin-right-30 {
-    margin-right: 30px;
-}
-.u-margin-right-25 {
-    margin-right: 25px;
-}
-.u-margin-right-20 {
-    margin-right: 20px;
-}
-.u-margin-right-15 {
-    margin-right: 15px;
-}
-.u-margin-right-10 {
-    margin-right: 10px;
-}
+.u-margin-right-100 { margin-right: 100px; }
+.u-margin-right-60 { margin-right: 60px; }
+.u-margin-right-50 { margin-right: 50px; }
+.u-margin-right-40 { margin-right: 40px; }
+.u-margin-right-30 { margin-right: 30px; }
+.u-margin-right-25 { margin-right: 25px; }
+.u-margin-right-20 { margin-right: 20px; }
+.u-margin-right-15 { margin-right: 15px; }
+.u-margin-right-10 { margin-right: 10px; }
 
-.u-margin-left-100 {
-    margin-left: 100px;
-}
-.u-margin-left-60 {
-    margin-left: 60px;
-}
-.u-margin-left-50 {
-    margin-left: 50px;
-}
-.u-margin-left-40 {
-    margin-left: 40px;
-}
-.u-margin-left-30 {
-    margin-left: 30px;
-}
-.u-margin-left-25 {
-    margin-left: 25px;
-}
-.u-margin-left-20 {
-    margin-left: 20px;
-}
-.u-margin-left-15 {
-    margin-left: 15px;
-}
-.u-margin-left-10 {
-    margin-left: 10px;
-}
+.u-margin-left-100 { margin-left: 100px; }
+.u-margin-left-60 { margin-left: 60px; }
+.u-margin-left-50 { margin-left: 50px; }
+.u-margin-left-40 { margin-left: 40px; }
+.u-margin-left-30 { margin-left: 30px; }
+.u-margin-left-25 { margin-left: 25px; }
+.u-margin-left-20 { margin-left: 20px; }
+.u-margin-left-15 { margin-left: 15px; }
+.u-margin-left-10 { margin-left: 10px; }
 
 @media #{$mobile} {
     .u-mobile-float-left {
