--- a/static/sass/pages/myaccount/_cus_acnt_page.scss
+++ b/static/sass/pages/myaccount/_cus_acnt_page.scss
@@ -36,7 +36,6 @@
         justify-content: center;
         height: 48px;
         min-height: 48px;
-        border-radius: 6px;
         font-size: 16px;
         font-weight: $weightBold;
         line-height: 1.5;
@@ -56,12 +55,11 @@
             border: 1px solid $blue_sh5;
             color: $blue_sh5;
         }
+
+        &--grow {
+            flex-grow:1;
+        }
     }
-
-
-
-
-
 
     &__info {
         &-container {
@@ -69,177 +67,70 @@
             padding: 80px 0 65px;
         }
     }
-
-
-
-    
-
-    
-
-
-
-    //user section
-    // &__user-container {
-    //     margin: 80px 0;
-
-    //     #{$selfCusAcnt} {
-
-
-    //         &-grid {
-    //             &__search,
-    //             form {
-    //                 display: flex;
-    //                 flex-direction: column;
-
-    //                 &--field {
-    //                     flex: 1;
-    //                     margin-bottom: 20px;
-    //                     position: relative;
-    //                     display: flex;
-
-    //                     span {
-    //                         position: absolute;
-    //                         left: 15px;
-    //                         top: 12px;
-    //                         width: 25px;
-    //                         height: 25px;
-    //                     }
-
-    //                     input {
-    //                         background-color: $grey3;
-    //                         padding-left: 50px;
-    //                         flex: 1;
-    //                         height: 48px;
-    //                         outline: none;
-    //                         border: none;
-    //                     }
-    //                 }
-
-    //                 &--btn {
-    //                     width: 100%;
-
-    //                     .cus_acnt__btn {
-    //                         width: 100%;
-    //                     }
-    //                 }
-    //             }
-
-    //             &__show-user {
-    //                 border-bottom: 1px solid $grey4;
-    //                 color: $grey5;
-    //                 font-size: 14px;
-    //                 font-style: italic;
-    //                 font-family: $primaryFont;
-    //                 padding: 10px 0;
-    //                 margin-top: 15px;
-    //             }
-
-    //             &__list {
-    //                 margin-top: 20px;
-
-    //                 li {
-    //                     border-bottom: 1px solid $grey4;
-    //                     margin-bottom: 20px;
-    //                     padding-bottom: 20px;
-    //                     &.no-data {
-    //                         color: $grey5;
-    //                         font-size: 18px;
-    //                         line-height: 1.78;
-    //                         font-weight: $weightRegular;
-    //                         border-bottom: none;
-    //                         padding-bottom: 0px;
-    //                     }
-    //                 }
-
-    //                 .user-list--items {
-    //                     display: flex;
-    //                     flex-direction: column;
-
-    //                     &-name {
-    //                         font-size: 18px;
-    //                         color: $black;
-    //                         font-family: $primaryFont;
-    //                         font-weight: $weightBold;
-    //                         line-height: 1.78;
-    //                     }
-
-    //                     &-email {
-    //                         font-size: 14px;
-    //                         color: $grey5;
-    //                         font-family: $primaryFont;
-    //                         font-weight: $weightRegular;
-    //                         line-height: 1.14;
-    //                     }
-
-    //                     &-remove {
-    //                         font-size: 14px;
-    //                         color: $grey4;
-    //                         font-family: $primaryFont;
-    //                         font-weight: $weightMedium;
-    //                         line-height: 1.33;
-    //                         text-decoration: none;
-    //                         margin-top: 15px;
-    //                         display: inline-block;
-
-    //                         &:hover {
-    //                             color: $blue_sh5;
-    //                         }
-
-    //                         .icon {
-    //                             margin-right: 8px;
-    //                         }
-    //                     }
-    //                 }
-    //             }
-
-    //             @include responsive(xs) {
-    //                 @include respond-to(md) {
-    //                     #{$selfCusAcnt} {
-    //                         &__user {
-    //                             &-grid {
-    //                                 &__search {
-    //                                     flex: 1;
-    //                                     flex-direction: row;
-
-    //                                     &--field {
-    //                                         flex: 1;
-    //                                         margin-right: 10px;
-    //                                         margin-bottom: 0px;
-    //                                     }
-    //                                     &--btn {
-    //                                         max-width: 170px;
-    //                                     }
-    //                                 }
-
-    //                                 &__list {
-    //                                     .user-list--items {
-    //                                         flex-direction: row;
-    //                                         justify-content: space-between;
-    //                                         align-items: center;
-
-    //                                         &-remove {
-    //                                             margin-top: 0px;
-    //                                         }
-    //                                     }
-    //                                 }
-    //                             }
-    //                         }
-    //                     }
-
-    //                     form {
-    //                         flex: 1;
-    //                         flex-direction: row;
-    //                     }
-    //                 }
-    //             }
-    //         }
-    //     }
-    // }
-
-
 }
 
 
+
+
+
+
+
+
+.managed-user {
+
+
+
+    &__item {
+        border-bottom: 1px solid $grey4;
+        margin-bottom: 20px;
+        padding-bottom: 20px;
+        @include flexbox;
+
+        &.no-data {
+            color: $grey5;
+            font-size: 18px;
+            line-height: 1.78;
+            font-weight: $weightRegular;
+            border-bottom: none;
+            padding-bottom: 0px;
+        }
+    }
+
+    &__name {
+        font-size: 18px;
+        color: $black;
+        font-family: $primaryFont;
+        font-weight: $weightBold;
+        line-height: 1.78;
+    }
+
+    &__email {
+        font-size: 14px;
+        color: $grey5;
+        font-family: $primaryFont;
+        font-weight: $weightRegular;
+        line-height: 1.14;
+    }
+
+    &__remove {
+        font-size: 14px;
+        color: $grey4;
+        font-family: $primaryFont;
+        font-weight: $weightMedium;
+        line-height: 1.33;
+        text-decoration: none;
+        margin-top: 15px;
+        display: inline-block;
+
+        &:hover {
+            color: $blue_sh5;
+        }
+
+        .icon {
+            margin-right: 8px;
+        }
+    }
+}
 
 
 
@@ -248,23 +139,87 @@
     margin-bottom: 25px;
     padding: 16px 0;
 
-    &__form-container {
-        @include flexbox;
-        @include flex-direction(column, vertical);
+    &__label {
+        font-size: 26px;
+        line-height: 1.23;
+        color: $black;
+        font-weight: $weightBold;
+        font-family: $primaryFont;
     }
 
+
     &__row-group {
-        @include flexbox;
-        @include flex-direction(row, horizontal);
-        flex: 1 0 100%;
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 30px;
+        align-items:center;
     }
 
     &__form-group {
         @include flexbox;
         @include flex-direction(column, vertical);
-        flex: 1 0 50%;
+        flex-grow: 1;
         margin-bottom: 20px;
+        row-gap:6px;
         display: flex;
+    }
+
+    &__buttons {
+        @include flexbox;
+        gap:12px;
+    }
+
+    &__form-input {
+        height:48px;
+        padding-left:10px;
+
+    }
+
+
+    &__show-user {
+        border-bottom: 1px solid $grey4;
+        color: $grey5;
+        font-size: 14px;
+        font-style: italic;
+        font-family: $primaryFont;
+        padding: 10px 0;
+        margin-top: 15px;
+    }
+
+    &__search {
+
+        &-form {
+            @include flexbox;
+        }
+
+        &-field {
+            flex-grow: 1;
+            margin-bottom: 20px;
+            position: relative;
+            display: flex;
+
+            span {
+                position: absolute;
+                left: 15px;
+                top: 12px;
+                width: 25px;
+                height: 25px;
+            }
+
+            input {
+                background-color: $grey3;
+                padding-left: 50px;
+                flex: 1;
+                height: 48px;
+                outline: none;
+                border: none;
+            }
+        }
+
+        &-btn {
+            width: 168px;
+            margin-left:10px;
+        }
     }
 
 
@@ -278,29 +233,9 @@
         &-btn {
             width: 100%;
             max-width:170px;
-            margin-bottom: 15px;
         }
     }
 
-    &__addSec {
-        .user-editor {
-            .text-button {
-                position: absolute;
-                top: 0;
-                width: 170px;
-                height: 48px;
-                left: 15px;
-                background-color: $grey3;
-                display: flex;
-                align-items: center;
-                font-size: 26px;
-                line-height: 1.23;
-                color: $black;
-                font-weight: $weightBold;
-                font-family: $primaryFont;
-            }
-        }
-    }
 
     &__allot-wrap {
         display: flex;
@@ -326,35 +261,7 @@
         }
     }
 
-    // @include responsive(xs) {
-    //     @include respond-to(md) {
-    //         &__addition {
-    //             flex-direction: row;
-    //             align-items: center;
-    //             justify-content: space-between;
 
-    //             &-btn {
-    //                 max-width: 170px;
-    //                 margin-bottom: 0;
-    //             }
-    //         }
-
-    //         &__addSec {
-    //             .user-editor {    
-    //                 .cus_acnt__infoBox-form {    
-    //                     .cus_acnt__form__group {
-    //                         flex: 1 0 calc(50% - 20px);
-    //                         margin: 0 10px 20px;
-
-    //                         &.cus_acnt__form__btns {
-    //                             margin-top: 34px;
-    //                         }
-    //                     }
-    //                 }
-    //             }
-    //         }
-    //     }
-    // }
 }
 
 
@@ -534,6 +441,9 @@
 
 
 .infoBox-form {
+    form {
+        width:100%;
+    }
 
     display: flex;
     flex-wrap: wrap;
@@ -542,6 +452,11 @@
         width:100%;
     }
 
+    &__horizontal-group {
+        @include flexbox;
+        @include flex-direction(row, horizontal);
+        gap:10px;
+    }
 
     &__group {
         display:flex;
