--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -297,7 +297,7 @@
 
                                 <div class="planInfo__subInfo">
                                     {% if pwstats['status'] == 'cancelled' %}
-                                        <a href="javascript:;" id='cancelAccount' class="account__btn account__btn--solid" name="">Restart subscription</a>
+                                        <a href="javascript:;" id='cancelAccount' class="planInfo__subInfo-button account__btn account__btn--solid" name="">Restart subscription</a>
                                     {% else %}
                                         <a href="javascript:;" id='cancelAccount' class="cancel-subBtn">Cancel subscription</a>
                                     {% endif %}
