--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -76,7 +76,7 @@
 
 
 //my account page
-@import "cus_acnt_page";
+@import "my-account";
 @import "component.plan-features";
 @import "component.profile-message";
 @import "component.infobox";
