--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -282,6 +282,8 @@
                                             <p class="planInfo__status-text">Articles Remaining</p>
                                             <p class="planInfo__status-value">{{ pwstats['article_count']}}</p>
                                         </div>
+                                        <p class="planInfo__article-info">To top up, choose an article plan below</p>
+
                                     {% endif %}
 
 
@@ -291,6 +293,9 @@
                                             <p class="planInfo__status-value">{{ managedUserCount }} of {{totalPlanUserCount}}</p>
                                         </div>
                                     {% endif %}
+
+
+
                                 </div>
 
 
@@ -299,7 +304,7 @@
                                     {% if pwstats['status'] == 'cancelled' %}
                                         <a href="javascript:;" id='cancelAccount' class="planInfo__subInfo-button account__btn account__btn--solid" name="">Restart subscription</a>
                                     {% else %}
-                                        <a href="javascript:;" id='cancelAccount' class="cancel-subBtn">Cancel subscription</a>
+                                        <a href="javascript:;" id='cancelAccount' class="planInfo cancel-subBtn">Cancel subscription</a>
                                     {% endif %}
                                 </div>
                             </div>
