update coming soon page

--- a/coming-soon.twig
+++ b/coming-soon.twig
@@ -1,9 +1,9 @@
 {{ set(this, 'params', {customClass: "b-commingSoon"})}}
 
 <div class="g-commingSoon g-commingSoon-xs">
-    <div class="cus_coming-soon-container">
-        <div class="cus_coming-soon-row">
-            <div class="cus_coming-soon-col-12">
+    <div class="acme-container">
+        <div class="acme-row">
+            <div class="acme-col-12">
                 <div class="g-commingSoon__main">
                     <aside class="g-commingSoon__main-ls">
                         <h2>Our new website is coming soon!</h2>
