move coming soon styles

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -88,7 +88,7 @@
 @import "component.classifieds";
 
 //coming soon page
-@import "cus_coming_soon";
+@import "coming_soon";
 
 // old
 @import "component.modal-login-form";
