--- a/layout-subscribe.twig
+++ b/layout-subscribe.twig
@@ -143,7 +143,7 @@
                                         <input type="hidden" class="" name="trial" id="trial" value="{{trial}}">
                                         <input type="hidden" class="" name="signup" id="signup" value="{{signup}}">
                                         <input type="hidden" class="" name="paypal" id="paypal" value="{{paypal}}">
-
+                                        <input type="hidden" class="" name="plantype" id="plantype" value="{{plan['type']}}">
 
                                         <div class="form-group form-group-sm has-error u-margin-bottom-15">
                                             <label for="email" class="input__label">Email address</label>
@@ -267,9 +267,10 @@
                                                     class="c-checkbox__input validate[required]" />
                                                 <label class="c-checkbox__label u-padding-top-3" for="terms">
                                                     <span class="c-checkbox__button"></span>
-                                                    I agree to the <strong> <a
-                                                            href="{{networkData.defaultBlogUrl}}/privacy-policy"
-                                                            target="_blank">Terms of Service</a></strong>
+                                                    I agree to the 
+                                                    <strong> 
+                                                        <a href="{{networkData.defaultBlogUrl}}/privacy-policy" target="_blank">Terms of Service</a>
+                                                    </strong>
                                                 </label>
                                             </div>
                                         </div>
