--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -146,9 +146,9 @@
 <div class="c-sidebarMenu">
     <a href="javascript" class="c-sidebarMenu__subscribe">
         <span>Subscribe today</span>
-        <span>
+        {#<span>
             <img src={{networkData.templatePath}}/static/icons/icons-navigation-arrow.svg />
-        </span>
+        </span>#}
     </a>
     <div class="c-sidebarMenu__closeInfo">
         <button class="js-closeMenu">
