--- a/layouts/partials/_user-styles.twig
+++ b/layouts/partials/_user-styles.twig
@@ -68,6 +68,14 @@
         document.write("<style id='user-colors' type='text/css'>:root {--main-color:{{themeColors.headingColor}};--main-color-h:"+(mainColor['h']*360)+";--main-color-s:"+(mainColor['s']*100)+"%;--main-color-l:"+(mainColor['l']*100)+"%;}</style>"); #}
 {% endif %}
 
+{% if themeColors.primaryColor != "" %} 
+    <script type="text/javascript">
+        function hexToHSL(o){var e=/^#?([a-f\d]{2})([a-f\d]{2})([a-f\d]{2})$/i.exec(o);r=parseInt(e[1],16),g=parseInt(e[2],16),b=parseInt(e[3],16),r/=255,g/=255,b/=255;var a,l,n=Math.max(r,g,b),s=Math.min(r,g,b),t=(n+s)/2;if(n==s)a=l=0;else{var i=n-s;switch(l=t>.5?i/(2-n-s):i/(n+s),n){case r:a=(g-b)/i+(g<b?6:0);break;case g:a=(b-r)/i+2;break;case b:a=(r-g)/i+4}a/=6}var c=new Object;return c.h=a,c.s=l,c.l=t,c}var secColor=hexToHSL("{{themeColors.primaryColor}}");document.write("<style id='user-secColors' type='text/css'>:root {--sec-color:{{themeColors.primaryColor}};--sec-color-h:"+360*secColor.h+";--sec-color-s:"+100*secColor.s+"%;--sec-color-l:"+100*secColor.l+"%;}</style>");
+    </script>
+
+    
+{% endif %}
+
 <style type="text/css">
     
     {% if customCss != "" %}
