--- a/static/sass/components/_component.header-top-bar.scss
+++ b/static/sass/components/_component.header-top-bar.scss
@@ -62,6 +62,11 @@
             }
             .c-navigation-4 {
                 padding: 0;
+
+                .c-navigation__item, .c-navigation__item.subscribe {
+                    color: $white;
+                    border-color: $white;
+                }
             }
         }
 
