--- a/static/sass/cards/_card-7.scss
+++ b/static/sass/cards/_card-7.scss
@@ -46,7 +46,7 @@
                         top: 50%;
                         @include translate(0, -50%);
                         @include size(4px);
-                        background-color: $blue_sh5;
+                        background-color: var(--sec-color);
                     }
                 }
             }
