--- a/static/sass/pages/coming_soon/_coming_soon.scss
+++ b/static/sass/pages/coming_soon/_coming_soon.scss
@@ -57,7 +57,7 @@
     }
 
     &__btn {
-      background: $blue_sh5;
+      background: var(--sec-color);
       height: 48px;
       width: 100%;
       color: $white;
