--- a/static/sass/cards/_card.scss
+++ b/static/sass/cards/_card.scss
@@ -92,7 +92,7 @@
                     position: absolute;
                     right: 0;
                     top: 0;
-                    background-color: $blue_sh5;
+                    background-color: var(--sec-color);
                     @include size(40px);
                     z-index: 15;
                 }
@@ -101,7 +101,7 @@
 
         &__category {
             @include font-size(12);
-            color: $blue_sh5;
+            color: var(--sec-color);
             font-weight: $weightMedium;
             margin: 2px 0;
         }
@@ -119,7 +119,7 @@
             line-height: 1.33;
             font-weight: $weightMedium;
             padding: 2px 5px;
-            background-color: $blue_sh5;
+            background-color: var(--sec-color);
             margin: 2px 10px 2px 0;
         }
 
@@ -153,7 +153,7 @@
                     display: block;
                     position: absolute;
                     font-family: $iconfont;
-                    color: $blue_sh5;
+                    color: var(--sec-color);
                     @include size(auto);
                     @include font-size(9);
                     line-height: 1;
