--- a/static/sass/cards/_event-card-3.scss
+++ b/static/sass/cards/_event-card-3.scss
@@ -35,7 +35,7 @@
             margin-top: 4px;
         }
         &__category {
-            color: $blue_sh5;
+            color: var(--sec-color);
             @include font-size(12);
             font-weight: $weightBold;
             line-height: 1.33;
