--- a/static/sass/components/_component.article.scss
+++ b/static/sass/components/_component.article.scss
@@ -28,7 +28,7 @@
   }
 
   &__category {
-    color: $blue_sh5;
+    color: var(--sec-color);
     @include font-size(12);
     line-height: 1.33;
     font-weight: $weightMedium;
@@ -63,7 +63,7 @@
     line-height: 1.33;
     font-weight: $weightMedium;
     padding: 2px 5px;
-    background-color: $blue_sh5;
+    background-color: var(--sec-color);
   }
 
   &__title {
@@ -125,7 +125,7 @@
         top: 50%;
         @include translate(0, -50%);
         @include size(4px);
-        background-color: $blue_sh5;
+        background-color: var(--sec-color);
       }
     }
   }
@@ -274,7 +274,7 @@
       font-size: 18px !important;
       font-family: $primaryFont !important;
       font-weight: $weightBold !important;
-      color: $blue_sh5;
+      color: var(--sec-color);
       line-height: 1.33;
       span,
       b,
@@ -283,7 +283,7 @@
         font-size: 18px !important;
         font-family: $primaryFont !important;
         font-weight: $weightBold !important;
-        color: $blue_sh5;
+        color: var(--sec-color);
         line-height: 1.33;
       }
     }
@@ -294,7 +294,7 @@
       &:before {
         content: "";
         @include size(8px);
-        background-color: $blue_sh5;
+        background-color: var(--sec-color);
         position: absolute;
         display: block;
         left: -28px;
@@ -323,7 +323,7 @@
       text-decoration: none;
       @include transition(all 0.3s ease);
       font-family: $secondaryFont !important;
-      color: $blue_sh5 !important;
+      color: var(--sec-color) !important;
     }
 
     blockquote {
@@ -333,7 +333,7 @@
       margin: 40px 0px 40px 50px;
       position: relative;
       padding-left: 30px;
-      border-left: 8px solid $blue_sh5;
+      border-left: 8px solid var(--sec-color);
       color: $black;
       font-family: $primaryFont !important;
       font-size: 22px !important;
