--- a/static/sass/components/_component.event.scss
+++ b/static/sass/components/_component.event.scss
@@ -9,7 +9,7 @@
         }
     }
     &__category {
-        color: $blue_sh5;
+        color: var(--sec-color);
         @include font-size(12);
         line-height: 1.33;
         font-weight: $weightMedium;
@@ -174,7 +174,7 @@
             &:before {
               content: "";
               @include size(8px);
-              background-color: $blue_sh5;
+              background-color: var(--sec-color);
               position: absolute;
               display: block;
               left: -28px;
@@ -203,7 +203,7 @@
             text-decoration: none;
             @include transition(all 0.3s ease);
             font-family: $secondaryFont !important;
-            color: $blue_sh5 !important;
+            color: var(--sec-color) !important;
         }
 
         blockquote {
@@ -214,7 +214,7 @@
             margin-top: 40px;
             position: relative;
             padding-left: 30px;
-            border-left: 8px solid $blue_sh5;
+            border-left: 8px solid var(--sec-color);
             p {
                 color: $black;
                 font-family: $primaryFont !important;
