--- a/static/sass/components/_component.search.scss
+++ b/static/sass/components/_component.search.scss
@@ -29,8 +29,8 @@
 .u-loadmore-button {
     @include font-size(12);
     font-weight: $weightBold;
-    color: $blue_sh5;
-    border-bottom: 2px solid $blue_sh5;
+    color: var(--sec-color);
+    border-bottom: 2px solid var(--sec-color);
     @include inline-flex;
     text-decoration: none;
     padding-bottom: 2px;
