--- a/static/sass/cards/_event-card.scss
+++ b/static/sass/cards/_event-card.scss
@@ -168,6 +168,7 @@
                 &__media {
                     width: 63%;
                     height: auto;
+                    max-height: 450px;
                 }
 
                 &__heading {
